--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
+# finder
+.DS_Store
+
+# ide settings
+.idea/
+.vscode/
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
